Updates to some basic layouts; fixing broken layouts

--- a/src/scss/04-layouts/_content-row.scss
+++ b/src/scss/04-layouts/_content-row.scss
@@ -205,13 +205,13 @@
 
 .quote {
   $self: &;
-
-  padding: 4rem var(--content-padding);
-  margin: 2rem 0;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-evenly;
 
+  @include mx.for-size("tablet-landscape-up") {
+    padding: 4rem var(--content-padding);
+  }
   &--single {
     justify-content: center;
     #{$self}__item {
@@ -246,7 +246,7 @@
 
     @include mx.font-size(18px, 1.5);
 
-    margin-top: 0;
+    margin: 0 0 2rem;
   }
 
   &__item {
@@ -255,6 +255,7 @@
 
     @include mx.for-size("tablet-landscape-up"){
       display: block;
+      flex-basis: calc(100% / 3);
     }
   }
 
@@ -265,19 +266,32 @@
   &__bullets {
     text-align: center;
     display: block;
+    @include mx.for-size("tablet-landscape-up") {
+      display: none;
+    }
   }
 
   &__bullet {
     background: var(--umkc-blue);
-    height: 1rem;
-    width: 1rem;
+    height: 2.25rem;
+    width: 2.25rem;
     border-radius: 100%;
+    margin: 0.25rem;
+
+    &--active {
+      background: var(--umkc-dark-blue);
+    }
+  }
+  img {
+    height: #{mx.px-to-rem(150px)};
+    width: #{mx.px-to-rem(150px)};
   }
 }
 
 .img {
   &--round {
     border-radius: 100%;
+    aspect-ratio: 1 / 1;
   }
 }
 
@@ -286,9 +300,9 @@
   margin-top: 10rem;
   display: flex;
   justify-content: center;
-  flex-flow: row wrap;
+  flex-flow: column;
 
-  @include mx.for-size("desktop-up") {
+  @include mx.for-size("tablet-landscape-up") {
     justify-content: flex-start;
     align-items: center;
     flex-flow: row nowrap;
@@ -301,11 +315,10 @@
 
   &__img {
     margin-top: -3rem;
-    padding-right: 2rem;
+    aspect-ratio: 1 / 1;
 
-    @include mx.for-size("desktop-up") {
-      height: #{mx.px-to-rem(577px)};
-      width: #{mx.px-to-rem(577px)};
+    @include mx.for-size("tablet-landscape-up") {
+      align-self: flex-start;
       object-fit: cover;
     }
   }
@@ -314,8 +327,9 @@
     text-align: center;
     margin-top: 1.75rem;
 
-    @include mx.for-size("desktop-up") {
+    @include mx.for-size("tablet-landscape-up") {
       text-align: left;
+      padding-left: 4rem;
     }
   }
 }
@@ -336,13 +350,19 @@
   }
 
   &__image {
-    padding-right: 2rem;
+    width: #{mx.px-to-rem(577px)};
+    max-width: 100%;
+    @include mx.for-size("tablet-landscape-up"){
+      padding-right: 4rem;
+    }
   }
-
+  &__content {
+    flex-grow: 1;
+  }
   &__row {
     display: flex;
     align-items: center;
-    margin: var(--content-padding);
+    // margin: var(--content-padding);
     flex-wrap: wrap;
     text-align: center;
     justify-content: center;
@@ -354,8 +374,10 @@
         flex-flow: row-reverse;
 
         #{$self}__image {
-          padding-right: 0;
-          padding-left: 2rem;
+          @include mx.for-size("tablet-landscape-up"){
+            padding-right: 0;
+            padding-left: 4rem;
+          }
         }
       }
     }
